# Mimir

./: .gitignore  PROSPECTUS.md  README.md  mimir.py  pyproject.toml  requirements.txt
examples/: demo.py
mimir/: __init__.py  _mock_zvec.py  graph.py  optimizer.py  server.py  storage.py  tools.py
sdk/: LICENSE  README.md  package-lock.json  package.json
sdk/src/: index.ts
